# tui-gpu

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DO_NEXT.md  GAP_ANALYSIS.md  HIGH_PERFORMANCE_GPU.md  LICENSE  PLAN.md  README.md  STATUS.md  TUI_GPU_RESEARCH.md  WHAT_WE_DID.md
crates/ansi-image/: Cargo.toml
crates/ansi-image/src/: lib.rs
crates/doom-input/: Cargo.toml
crates/doom-input/src/: lib.rs
crates/frame-feed/: Cargo.toml
crates/frame-feed/src/: lib.rs
crates/layout-compiler/: Cargo.toml
crates/layout-compiler/src/: main.rs
crates/render-app/: Cargo.toml
crates/render-app/src/: grid.wgsl  layout.rs  main.rs  mouse.rs  rgb_frame.rs  rgb_frame.wgsl  text.wgsl
crates/renderer-core/: Cargo.toml
crates/renderer-core/src/: demos.rs  gpu_demos.rs  layout.rs  lib.rs  plasma.wgsl  raytracer.wgsl  rgb_frame.rs  text.rs  youtube.rs
crates/runtime-cli/: Cargo.toml
crates/runtime-cli/src/: main.rs
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: lib.rs
crates/terminal-session/: Cargo.toml
crates/terminal-session/src/: lib.rs
designs/: agents_and_history.md  api_and_transports.md  layout_and_accessibility.md  renderer.md  runtime_and_events.md  testing_strategy.md  tools.md
docs/: ALACRITTY.md  GPU_TUI_BUILDING_BLOCKS.md  IMAGE_TO_TUI.md  RENDERER_TEXT_PLAN.md
examples/: README.md
examples/ansi-image-demo/: Cargo.toml
examples/ansi-image-demo/src/: main.rs
examples/doom-ansi/: Cargo.toml
examples/doom-ansi/src/: main.rs
examples/doom-feed/: Cargo.toml  build.rs
examples/doom-feed/src/: main.rs
examples/tui-demos/: Cargo.toml
examples/tui-demos/src/: main.rs
examples/youtube-ansi/: Cargo.toml
examples/youtube-ansi/src/: main.rs
options/: gpu_terminal_protocols.md  opengl_glfw.md  skia_canvas.md  vulkan_pipeline.md  wgpu_renderer.md
projects/: alacritty.md  contour_terminal.md  ghostty.md  kitty_terminal.md  lapce_editor.md  neovide.md  rio_terminal.md  warp_terminal.md  wezterm.md  zed_editor.md
ui/screens/: main.mdx
