[package]
name = "renderer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi-image = { path = "../ansi-image" }
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
crossterm = "0.27"
doom-input = { path = "../doom-input" }
frame-feed = { path = "../frame-feed" }
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
pollster = "0.3"
rodio = "0.17"
futures-intrusive = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
taffy = "0.3"
terminal-session = { path = "../terminal-session" }
wgpu = "0.19"
winit = "0.29"
font8x8 = "0.3"
