[package]
name = "runtime-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
runtime-core = { path = "../runtime-core" }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
ansi-image = { path = "../ansi-image" }
