[package]
name = "tui-demos"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
ansi-image = { path = "../../crates/ansi-image" }
frame-feed = { path = "../../crates/frame-feed" }
